src-tauri/build_err.txt
    Checking emmm2 v0.1.0 (E:\Dev\EMMM2NEW\src-tauri)
warning: unused import: `std::sync::Arc`
   --> src\commands\scan_cmds.rs:340:9
    |
340 |     use std::sync::Arc;
    |         ^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::time::Duration`
   --> src\commands\scan_cmds.rs:341:9
    |
341 |     use std::time::Duration;
    |         ^^^^^^^^^^^^^^^^^^^

warning: duplicated attribute
   --> src\services\file_ops\archive.rs:587:5
    |
587 |     #[test]
    |     ^^^^^^^
    |
    = note: `#[warn(duplicate_macro_attributes)]` on by default

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
   --> src\services\file_ops\archive.rs:833:22
    |
833 |         let result = extract_archive(&zip_path, dir.path(), None);
    |                      ^^^^^^^^^^^^^^^----------------------------- argument #4 of type `bool` is missing
    |
note: function defined here
   --> src\services\file_ops\archive.rs:81:8
    |
 81 | pub fn extract_archive(
    |        ^^^^^^^^^^^^^^^
...
 85 |     overwrite: bool,
    |     ---------------
help: provide the argument
    |
833 |         let result = extract_archive(&zip_path, dir.path(), None, /* bool */);
    |                                                                 ++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
   --> src\services\file_ops\archive.rs:848:22
    |
848 |         let result = extract_archive(&archive_path, dir.path(), Some("my7zPass")).unwrap();
    |                      ^^^^^^^^^^^^^^^--------------------------------------------- argument #4 of type `bool` is missing
    |
note: function defined here
   --> src\services\file_ops\archive.rs:81:8
    |
 81 | pub fn extract_archive(
    |        ^^^^^^^^^^^^^^^
...
 85 |     overwrite: bool,
    |     ---------------
help: provide the argument
    |
848 |         let result = extract_archive(&archive_path, dir.path(), Some("my7zPass"), /* bool */).unwrap();
    |                                                                                 ++++++++++++

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
   --> src\services\file_ops\archive.rs:864:22
    |
864 |         let result = extract_archive(&archive_path, dir.path(), Some("wrong_password"));
    |                      ^^^^^^^^^^^^^^^--------------------------------------------------- argument #4 of type `bool` is missing
    |
note: function defined here
   --> src\services\file_ops\archive.rs:81:8
    |
 81 | pub fn extract_archive(
    |        ^^^^^^^^^^^^^^^
...
 85 |     overwrite: bool,
    |     ---------------
help: provide the argument
    |
864 |         let result = extract_archive(&archive_path, dir.path(), Some("wrong_password"), /* bool */);
    |                                                                                       ++++++++++++

For more information about this error, try `rustc --explain E0061`.
warning: `emmm2` (lib test) generated 3 warnings
error: could not compile `emmm2` (lib test) due to 3 previous errors; 3 warnings emitted
